Ajout d'une fonction de redirection
Add function $this->redirect() in baseController;

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "florian/bds_framework",
+    "name": "fkeloks/bds_framework",
     "description": "A simple framework, by Florian B.",
     "type": "project",
     "keywords": ["framework", "bds"],
