--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.0 || ^7.1",
         "bramus/router": "~1.0",
+        "monolog/monolog": "^1.23",
         "twig/twig": "~2.0"
     },
     "require-dev": {
