Déplacement des fichiers index.php et .htaccess dans le dossier public/ + correctifs mineurs sur les chemins relatifs du framework

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,12 +20,12 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
 
 # ===== Errors ===== #
-ErrorDocument 400 /index.php?errorCode=400
-ErrorDocument 403 /index.php?errorCode=403
-ErrorDocument 404 /index.php?errorCode=404
-ErrorDocument 500 /index.php?errorCode=500
-ErrorDocument 503 /index.php?errorCode=503
-ErrorDocument 504 /index.php?errorCode=504
+ErrorDocument 400 index.php?errorCode=400
+ErrorDocument 403 index.php?errorCode=403
+ErrorDocument 404 index.php?errorCode=404
+ErrorDocument 500 index.php?errorCode=500
+ErrorDocument 503 index.php?errorCode=503
+ErrorDocument 504 index.php?errorCode=504
 
 # ===== Php values/flags ===== #
 php_value register_globals OFF
