Correctif majeur sur le routeur sur une architecture en sous-dossiers

--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@ Options -Indexes
 </Files>
 
 # ===== Directory index ===== #
-DirectoryIndex /public/index.php
+DirectoryIndex ./public/index.php
 
 # ===== Rewrite Engine ===== #
 RewriteEngine On
@@ -20,15 +20,15 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule . /public/index.php [L]
+RewriteRule . ./public/index.php [L]
 
 # ===== Errors ===== #
-ErrorDocument 400 /public/index.php?errorCode=400
-ErrorDocument 403 /public/index.php?errorCode=403
-ErrorDocument 404 /public/index.php?errorCode=404
-ErrorDocument 500 /public/index.php?errorCode=500
-ErrorDocument 503 /public/index.php?errorCode=503
-ErrorDocument 504 /public/index.php?errorCode=504
+ErrorDocument 400 ./public/index.php?errorCode=400
+ErrorDocument 403 ./public/index.php?errorCode=403
+ErrorDocument 404 ./public/index.php?errorCode=404
+ErrorDocument 500 ./public/index.php?errorCode=500
+ErrorDocument 503 ./public/index.php?errorCode=503
+ErrorDocument 504 ./public/index.php?errorCode=504
 
 # ===== Php values/flags ===== #
 php_value register_globals OFF
