--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "http-interop/response-sender": "^1.0",
         "monolog/monolog": "^1.23",
         "nikic/fast-route": "^1.2",
-        "twig/twig": "~2.0"
+        "twig/twig": "~2.0",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
