--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require": {
         "php": "^7.0 || ^7.1",
+        "filp/whoops": "^2.1",
         "guzzlehttp/psr7": "^1.4",
         "http-interop/response-sender": "^1.0",
         "monolog/monolog": "^1.23",
