--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.0 || ^7.1",
         "filp/whoops": "^2.1",
@@ -29,6 +30,9 @@
         "symfony/console": "^3.3"
     },
     "scripts": {
+        "post-install-cmd": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
         "test": "phpunit"
     },
     "autoload": {
