Changement de namespace pour ajouter plsu de logique à certaines classes

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "BDSCore\\": "core/",
+            "BDSCore\\": "core/Framework",
+            "BDSHelpers\\": "core/Helpers",
             "BDSConsole\\": "bin/commands"
         }
     }
