--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "authors": [
         {
             "name": "fkeloks",
-            "email": "fkeloks@gmail.com"
+            "email": "fkeloks@gmail.com",
+            "role": "Developer"
         }
     ],
     "config": {
@@ -18,7 +19,6 @@
         "php": "^7.0 || ^7.1",
         "filp/whoops": "^2.1",
         "guzzlehttp/psr7": "^1.4",
-        "http-interop/response-sender": "^1.0",
         "monolog/monolog": "^1.23",
         "nikic/fast-route": "^1.2",
         "twig/twig": "~2.0",
