Mise à jour du composer.json (2)

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "keywords": ["framework", "bds"],
     "license": "MIT",
-    "version": "1.0",
+    "version": "v1.0",
     "authors": [
         {
             "name": "fkeloks",
@@ -41,11 +41,6 @@
             "BDSCore\\": "core/Framework",
             "BDSHelpers\\": "core/Helpers",
             "BDSConsole\\": "bin/commands"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-master"
         }
     }
 }
