--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "minimum-stability" : "stable",
+    "prefer-stable" : true,
     "require": {
         "php": "^7.0 || ^7.1",
         "filp/whoops": "^2.1",
